--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -35,8 +35,8 @@ steps:
       deployment_name="web-game"
       namespace="default"
 
-      deployment_exists=$(az aks browse --resource-group DemoGroup --name demokubernete)
-      if [[ $deployment_exists == *"kubectl get deployment/$deployment_name"* ]]; then
+      deployment_exists=$(az aks get-credentials --resource-group DemoGroup --name demokubernete)
+      if [[ $deployment_exists = *"kubectl get deployment/$deployment_name"* ]]; then
         echo "##vso[task.setvariable variable=deployment_exists]true"
       else
         echo "##vso[task.setvariable variable=deployment_exists]false"
