Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -36,6 +36,7 @@ steps:
       namespace="default"
 
       deployment_exists=$(az aks get-credentials --resource-group DemoGroup --name demokubernete)
+      echo *"kubectl get deployment/$deployment_name"*
       if [[ $deployment_exists = *"kubectl get deployment/$deployment_name"* ]]; then
         echo "##vso[task.setvariable variable=deployment_exists]true"
       else
