--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -29,7 +29,7 @@ steps:
     command: 'apply'
     useConfigurationFile: true
     configuration: '01_kubernetes_aks'
-    arguments: 'image deployment/web-game *=demoarc123.azurecr.io/web-game:$(versionnumber)'
+    arguments: 'versionnumber=$(versionnumber)'
     secretType: 'dockerRegistry'
     containerRegistryType: 'Azure Container Registry'
     azureSubscriptionEndpointForSecrets: 'Towards-AzurePortal'
